# FreeTypeAndroid

./: .gitattributes  LICENSE.md  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/app/jerboa/freetypeandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/include/: glUtils.h
app/src/main/cpp/include/Text/: glyph.h  textRenderer.cpp  textRenderer.h  type.cpp  type.h  typeUtils.h
app/src/main/java/app/jerboa/freetypeandroid/: FreeTypeWrapper.kt  MainActivity.kt
app/src/main/java/app/jerboa/freetypeandroid/composeable/: Example.kt
app/src/main/java/app/jerboa/freetypeandroid/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/app/jerboa/freetypeandroid/ui/view/: GLRenderer.kt  GLView.kt
app/src/main/java/app/jerboa/freetypeandroid/utils/: glUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/app/jerboa/freetypeandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
